fixed issue with scrollbar in narrow header

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -57,7 +57,6 @@
 }
 
 .logo {
-    height: 100%;
+    height: 90%;
     object-fit: contain;
-
 }
