--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -4,13 +4,10 @@
         display: none;
         grid-template-columns: 100%;
         justify-content: left;
-
         width: 100%;
-        height: 32px;
         height: fit-content;
         margin-right: 0;
         background-color: #000;
-        height: fit-content;
     }
 
     .narrow-header {
